# JsLiveServer

./: .gitignore  README.md  build-server.sh
native/server/: CMakeLists.txt  README.md  build.sh
native/server/config/: server.conf
native/server/src/app/: main.cpp  server.cpp  server.h
native/server/src/config/: config.cpp  config.h
native/server/src/handlers/admin/: server_admin_monitoring.cpp  server_admin_monitoring.h  server_users.cpp  server_users.h
native/server/src/handlers/auth/: server_auth.cpp  server_auth.h
native/server/src/handlers/live/: server_rooms.cpp  server_rooms.h  server_rtmp_services.cpp  server_rtmp_services.h
native/server/src/handlers/media/: server_files.cpp  server_files.h  server_uploads.cpp  server_uploads.h
native/server/src/net/: net.cpp  net.h
native/server/src/runtime/rooms/: room_task_manager.cpp  room_task_manager.h  room_urls.cpp  room_urls.h
native/server/src/runtime/rtmp/: amf0.cpp  amf0.h  rtmp_auth.cpp  rtmp_auth.h  rtmp_server.cpp  rtmp_server.h  stream_manager.cpp  stream_manager.h
native/server/src/shared/http/: server_shared.cpp  server_shared.h
native/server/src/shared/model/: server_types.h
native/server/src/shared/users/: server_user_utils.cpp  server_user_utils.h
native/server/src/storage/persistence/: store.cpp  store.h
